category selection works & item list working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <h1>{{title}}</h1>
 
 <category-list></category-list>
+<br /><br />
+<pieces-list></pieces-list>
+
+<!--<display-content></display-content>-->
